<resources>
    <string name="app_name">room-wrangler</string>
    <string name="bcit">BCIT</string>
    <string name="string_roomwrangler">RoomWrangler</string>
    <string name="room_pic">room_pic</string>
    <string name="peopleicon">peopleIcon</string>
    <string name="how_many_people">How many people?</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="default_id">defalutID</string>
    <string name="go_to_mainpage">Go to MainPage</string>
    <string name="button_book_room_text">Book Room</string>
    <string name="book_room_title">Book Room</string>
    <string name="book_room_start_time">Start time:</string>
    <string name="book_room_end_time">End time:</string>
    <string name="button_submit_text">Submit</string>
    <string name="book_room_date">Date:</string>
    <string name="date">date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amentities">Amentities:</string>
    <string name="string_amentities">amentities</string>
    <string name="seatnum">seatNum</string>
    <string name="roomsize">roomsize</string>
    <string name="string_roomicon" />
    <string name="seaticon">seatIcon</string>
    <string name="tvicon">TVIcon</string>
    <string name="tv">tv</string>
    <string name="whiteboard">whiteboard</string>
    <string name="book_room">Book Room</string>
    <string name="textview">TextView</string>
    <string name="string_bookings" />
    <string name="bookings">Bookings:</string>
    <string name="check">Check</string>
    <string name="time_icon_src">time_icon</string>
</resources>