<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_RoomInfo_school_name"
            android:layout_width="294dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textline"
            android:gravity="bottom|end"
            android:text="@string/string_roomwrangler"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_RoomInfo_school_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#fef151"
            android:gravity="center"
            android:text="@string/bcit"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_book_room_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_room_title"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_book_room_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_room_start_time" />

    <TextView
        android:id="@+id/textView_book_room_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_room_end_time" />

</LinearLayout>