<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_datepicker_peoplenum_calender"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:orientation="vertical">

    <DatePicker
        android:id="@+id/datePicker_datepicker_peoplenum"
        android:layout_width="wrap_content"
        android:layout_height="384dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:datePickerMode="calendar" />

    <TextView
        android:id="@+id/textView_datepicker_peoplenum"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/how_many_people"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_datepicker_peoplenum_1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#e1e1e1"
            android:text="@string/_1"
            android:textColor="#1c1c1c"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button_datepicker_peoplenum_2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="#e1e1e1"
            android:text="@string/_2"
            android:textColor="#1c1c1c"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button_datepicker_peoplenum_3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="#e1e1e1"
            android:text="@string/_3"
            android:textColor="#1c1c1c"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button_datepicker_peoplenum_4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:text="@string/_4"
            android:textColor="#1c1c1c"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button_datepicker_peoplenum_5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="#e1e1e1"
            android:text="@string/_5"
            android:textColor="#1c1c1c"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button_datepicker_peoplenum_6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="#e1e1e1"
            android:text="@string/_6"
            android:textColor="#1c1c1c"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/button_datepicker_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/green"
        android:text="@string/check"
        android:textColor="#5E35B1" />

</LinearLayout>