<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RoomInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_RoomInfo_school_name"
            android:layout_width="294dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textline"
            android:gravity="bottom|end"
            android:text="@string/string_roomwrangler"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_RoomInfo_school_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#fef151"
            android:gravity="center"
            android:text="@string/bcit"
            android:textSize="24sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_roomInfo_pic"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/room_pic"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_roomInfo_room_number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alata"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView_roomInfo_icon"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:contentDescription="@string/peopleicon"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView_roomInfo_room_people"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:fontFamily="@font/alata"
            android:gravity="start|center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_roomInfo_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/alata"
        android:text="@string/date"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_roomInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView_roomInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_book_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/book_room" />

</LinearLayout>