<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_room_reservation_card"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/room_pic"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="311dp"
        android:layout_height="42dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_roomNumber_reservation_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen_light"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView_people_reservation_card"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/peopleicon"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView_people_reservation_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/oxygen_light"
            android:gravity="start|center_vertical"
            android:textColor="#000000"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView_time_reservation_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/time_icon_src"
            app:srcCompat="@drawable/ic_baseline_access_time_24" />

        <TextView
            android:id="@+id/textView_date_reservation_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen_light"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_duration_reservation_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/oxygen_light"
        android:textSize="16sp" />
</LinearLayout>